--- a/ml/floodprediction2.ipynb
+++ b/ml/floodprediction2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -780,38 +780,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 1000, Train Accuracy: 0.7891, Val Accuracy: 0.7796\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 7.0, 'medium': 8.0, 'high': 8.0}, 'Rainfall': {'low': 160.4000244140625, 'medium': 200.4000244140625, 'high': 200.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 30.0}, 'Wind_Speed': {'low': 1.0, 'medium': 2.0, 'high': 7.5}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.0}}\n",
-      "Episode 2000, Train Accuracy: 0.7969, Val Accuracy: 0.8002\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 7.0, 'medium': 6.0, 'high': 6.0}, 'Rainfall': {'low': 210.4000244140625, 'medium': 210.4000244140625, 'high': 210.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 30.0}, 'Wind_Speed': {'low': 0.5, 'medium': 3.0, 'high': 7.0}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.0}}\n",
-      "Episode 3000, Train Accuracy: 0.8125, Val Accuracy: 0.7956\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 6.0, 'medium': 6.0, 'high': 7.0}, 'Rainfall': {'low': 200.4000244140625, 'medium': 200.4000244140625, 'high': 210.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 35.0}, 'Wind_Speed': {'low': 0.5, 'medium': 2.0, 'high': 7.5}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.0}}\n",
-      "Episode 4000, Train Accuracy: 0.8281, Val Accuracy: 0.7969\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 6.0, 'medium': 7.0, 'high': 7.0}, 'Rainfall': {'low': 220.4000244140625, 'medium': 200.4000244140625, 'high': 200.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 35.0}, 'Wind_Speed': {'low': 0.5, 'medium': 2.0, 'high': 7.5}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.0}}\n",
-      "Episode 5000, Train Accuracy: 0.8281, Val Accuracy: 0.8006\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 7.0, 'medium': 8.0, 'high': 8.0}, 'Rainfall': {'low': 210.4000244140625, 'medium': 210.4000244140625, 'high': 210.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 35.0}, 'Wind_Speed': {'low': 0.5, 'medium': 1.0, 'high': 7.0}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.0}}\n",
-      "Episode 6000, Train Accuracy: 0.7969, Val Accuracy: 0.8010\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 6.0, 'medium': 6.0, 'high': 7.0}, 'Rainfall': {'low': 220.4000244140625, 'medium': 210.4000244140625, 'high': 210.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 30.0}, 'Wind_Speed': {'low': 1.0, 'medium': 1.0, 'high': 7.0}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.10000000149011612}}\n",
-      "Episode 7000, Train Accuracy: 0.8281, Val Accuracy: 0.8364\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 6.0, 'medium': 7.0, 'high': 8.0}, 'Rainfall': {'low': 230.4000244140625, 'medium': 230.4000244140625, 'high': 310.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 35.0}, 'Wind_Speed': {'low': 0.5, 'medium': 3.0, 'high': 7.5}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.10000000149011612}}\n",
-      "Episode 8000, Train Accuracy: 0.8906, Val Accuracy: 0.8888\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 6.0, 'medium': 8.0, 'high': 10.0}, 'Rainfall': {'low': 310.4000244140625, 'medium': 300.4000244140625, 'high': 300.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 35.0}, 'Wind_Speed': {'low': 0.5, 'medium': 1.0, 'high': 8.0}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.0}}\n",
-      "Episode 9000, Train Accuracy: 0.8438, Val Accuracy: 0.8817\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 8.0, 'medium': 9.0, 'high': 12.0}, 'Rainfall': {'low': 300.4000244140625, 'medium': 290.4000244140625, 'high': 290.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 35.0}, 'Wind_Speed': {'low': 1.0, 'medium': 2.0, 'high': 7.5}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.0}}\n",
-      "Episode 10000, Train Accuracy: 0.8984, Val Accuracy: 0.8673\n",
-      "{'Max_Temp': {'low': 25.0, 'medium': 25.0, 'high': 25.0}, 'Min_Temp': {'low': 8.0, 'medium': 9.0, 'high': 13.0}, 'Rainfall': {'low': 280.4000244140625, 'medium': 270.4000244140625, 'high': 270.4000244140625}, 'Relative_Humidity': {'low': 30.0, 'medium': 30.0, 'high': 40.0}, 'Wind_Speed': {'low': 1.0, 'medium': 2.0, 'high': 8.0}, 'Cloud_Coverage': {'low': 0.0, 'medium': 0.0, 'high': 0.0}}\n",
-      "Predicted: 0.797, Actual: 1\n",
-      "Features: {'Max_Temp': '34.30', 'Min_Temp': '25.60', 'Rainfall': '312.00', 'Relative_Humidity': '91.00', 'Wind_Speed': '0.90', 'Cloud_Coverage': '5.90', 'Month': '8.00'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1101,24 +1072,24 @@
     "                      f\"Val Accuracy: {val_accuracy:.4f}\")\n",
     "                print(self.history['thresholds'][-1])\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    df = pd.read_csv('Balanced_dataset2.csv')\n",
-    "    processed_df = preprocess_flood_data(df)\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     df = pd.read_csv('Balanced_dataset2.csv')\n",
+    "#     processed_df = preprocess_flood_data(df)\n",
     "    \n",
-    "    model = FloodPredictor(use_gpu=True)\n",
-    "    model.train(processed_df, num_episodes=10000, batch_size=128)\n",
-    "    test_data = {\n",
-    "    'Max_Temp': torch.tensor([34.3], dtype=torch.float32, device=model.device),\n",
-    "    'Min_Temp': torch.tensor([25.6], dtype=torch.float32, device=model.device),\n",
-    "    'Rainfall': torch.tensor([312], dtype=torch.float32, device=model.device),\n",
-    "    'Relative_Humidity': torch.tensor([91], dtype=torch.float32, device=model.device),\n",
-    "    'Wind_Speed': torch.tensor([0.9], dtype=torch.float32, device=model.device),\n",
-    "    'Cloud_Coverage': torch.tensor([5.9], dtype=torch.float32, device=model.device),\n",
-    "    'Month': torch.tensor([8], dtype=torch.float32, device=model.device)\n",
-    "}\n",
+    "#     model = FloodPredictor(use_gpu=True)\n",
+    "#     model.train(processed_df, num_episodes=10000, batch_size=128)\n",
+    "#     test_data = {\n",
+    "#     'Max_Temp': torch.tensor([34.3], dtype=torch.float32, device=model.device),\n",
+    "#     'Min_Temp': torch.tensor([25.6], dtype=torch.float32, device=model.device),\n",
+    "#     'Rainfall': torch.tensor([312], dtype=torch.float32, device=model.device),\n",
+    "#     'Relative_Humidity': torch.tensor([91], dtype=torch.float32, device=model.device),\n",
+    "#     'Wind_Speed': torch.tensor([0.9], dtype=torch.float32, device=model.device),\n",
+    "#     'Cloud_Coverage': torch.tensor([5.9], dtype=torch.float32, device=model.device),\n",
+    "#     'Month': torch.tensor([8], dtype=torch.float32, device=model.device)\n",
+    "# }\n",
     "\n",
-    "    pred = model.rule_based_flood_probability(test_data)\n",
-    "    model.validate_prediction(test_data, pred.item(), actual=1)\n"
+    "#     pred = model.rule_based_flood_probability(test_data)\n",
+    "#     model.validate_prediction(test_data, pred.item(), actual=1)\n"
    ]
   },
   {
@@ -1152,15 +1123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted: 0.452, Actual: 1\n",
-      "Features: {'Max_Temp': '37.80', 'Min_Temp': '26.00', 'Rainfall': '173.00', 'Relative_Humidity': '86.00', 'Wind_Speed': '1.70', 'Cloud_Coverage': '5.20'}\n"
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m test_data \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMax_Temp\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m37.8\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdevice),\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMin_Temp\u001b[39m\u001b[38;5;124m'\u001b[39m: torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m26\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdevice),\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRainfall\u001b[39m\u001b[38;5;124m'\u001b[39m: torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m173\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdevice),\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRelative_Humidity\u001b[39m\u001b[38;5;124m'\u001b[39m: torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m86\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdevice),\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWind_Speed\u001b[39m\u001b[38;5;124m'\u001b[39m: torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1.7\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdevice),\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCloud_Coverage\u001b[39m\u001b[38;5;124m'\u001b[39m: torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m5.2\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdevice),\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;66;03m# 'Month': torch.tensor([8], dtype=torch.float32, device=model.device)\u001b[39;00m\n\u001b[0;32m      9\u001b[0m }\n\u001b[0;32m     11\u001b[0m pred \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mrule_based_flood_probability(test_data)\n\u001b[0;32m     12\u001b[0m model\u001b[38;5;241m.\u001b[39mvalidate_prediction(test_data, pred\u001b[38;5;241m.\u001b[39mitem(), actual\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'torch' is not defined"
      ]
     }
    ],
@@ -1176,7 +1150,7 @@
     "}\n",
     "\n",
     "pred = model.rule_based_flood_probability(test_data)\n",
-    "model.validate_prediction(test_data, pred.item(), actual=1)\n",
+    "model.validate_prediction(test_data, pred.item(), actual=0)\n",
     "# torch.save(model.thresholds, 'thresholds.pth')\n",
     "# torch.save(model.Q_tables, 'Q_tables.pth')\n"
    ]
@@ -1208,31 +1182,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Flood Probability: 0.7181518077850342\n"
+      "Predicted Flood Probability: 0.3176373541355133\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Karan\\AppData\\Local\\Temp\\ipykernel_40720\\74721797.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  loaded_thresholds = torch.load('thresholds.pth', map_location=model.device)\n",
+      "C:\\Users\\Karan\\AppData\\Local\\Temp\\ipykernel_40720\\74721797.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  loaded_Q_tables = torch.load('Q_tables.pth', map_location=model.device)\n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
+    "model = FloodPredictor(use_gpu=True)\n",
+    "loaded_thresholds = torch.load('thresholds.pth', map_location=model.device)\n",
+    "loaded_Q_tables = torch.load('Q_tables.pth', map_location=model.device)\n",
+    "model.thresholds = loaded_thresholds\n",
+    "model.Q_tables = loaded_Q_tables\n",
     "test_data = {\n",
-    "    'Max_Temp': torch.tensor([34.3], dtype=torch.float32, device=model.device),\n",
-    "    'Min_Temp': torch.tensor([25.6], dtype=torch.float32, device=model.device),\n",
-    "    'Rainfall': torch.tensor([312], dtype=torch.float32, device=model.device),\n",
-    "    'Relative_Humidity': torch.tensor([91], dtype=torch.float32, device=model.device),\n",
-    "    'Wind_Speed': torch.tensor([0.9], dtype=torch.float32, device=model.device),\n",
-    "    'Cloud_Coverage': torch.tensor([5.9], dtype=torch.float32, device=model.device),\n",
-    "    'Month': torch.tensor([8], dtype=torch.float32, device=model.device)\n",
+    "    'Max_Temp': torch.tensor([35.99], dtype=torch.float32, device=model.device),\n",
+    "    'Min_Temp': torch.tensor([30.94], dtype=torch.float32, device=model.device),\n",
+    "    'Rainfall': torch.tensor([0], dtype=torch.float32, device=model.device),\n",
+    "    'Relative_Humidity': torch.tensor([16], dtype=torch.float32, device=model.device),\n",
+    "    'Wind_Speed': torch.tensor([4.12], dtype=torch.float32, device=model.device),\n",
+    "    'Cloud_Coverage': torch.tensor([0], dtype=torch.float32, device=model.device),\n",
+    "    'Month': torch.tensor([2], dtype=torch.float32, device=model.device)\n",
     "}\n",
     "\n",
     "flood_probability = model.rule_based_flood_probability(test_data)\n",
     "print(\"Predicted Flood Probability:\", flood_probability.item())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
